Prevent scrollbar from repositioning page

--- a/css/projects/spooky_spoils.css
+++ b/css/projects/spooky_spoils.css
@@ -63,10 +63,10 @@ body {
 
 .left {
   float: left;
-  width: 45%;
+  width: 46%;
 }
 
 .right {
   float: right;
-  width: 45%;
+  width: 46%;
 }
